# building_in_public

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  clean.sh
.github/workflows/: build.yml  cmake.yml
docs/: ARCHITECTURE.md  DEVLOG.md  ENGINE_DESIGN.md  GAME_DESIGN.md  PROJECT_STRUCTURE.md  ROADMAP.md  WEEK1_SUMMARY.md
include/: Engine.h  Player.h  Renderer.h
include/engine/core/: Engine.h  InputRecorder.h  Logger.h
include/engine/ecs/: Component.h  Entity.h  System.h  World.h
include/engine/platform/: Renderer.h
include/engine/systems/: InputSystem.h  MovementSystem.h  RenderSystem.h
include/game/components/: GameComponents.h
include/legacy/: Entity.h
src/: Engine.cpp  Renderer.cpp  main.cpp
src/engine/core/: Engine.cpp  InputRecorder.cpp  Logger.cpp
src/engine/ecs/: World.cpp
src/engine/platform/: Renderer.cpp
src/engine/systems/: InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
tests/: test_logger.cpp
